fixed game over overlap issue

--- a/html/waldo_game/stages/waldo_game.css
+++ b/html/waldo_game/stages/waldo_game.css
@@ -136,8 +136,8 @@ body {
   border-radius: 10px;
   width: 15%;
   height: 10%;
-  position: absolute;
-  top: 15%;
+  position: relative;
+  top: 10%;
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
